feat: Matar inimigos e novos tipos

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/hurtbox.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/tile_map/", "res://sprites/tile_map/Foreground/", "res://sprites/enemies/", "res://sprites/enemies/flying eye/", "res://scripts/", "res://fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://sprites/enemies/ghost/ghost.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://sprites/tile_map/", "res://sprites/tile_map/Foreground/", "res://sprites/enemies/", "res://sprites/enemies/ghost/", "res://fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://prefabs/knight.tscn", "res://prefabs/tile_map.tscn", "res://prefabs/obstacle_2.tscn", "res://prefabs/game_over.tscn", "res://prefabs/hud.tscn", "res://prefabs/obstacle_3.tscn")
-current_scene="res://scenes/game.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://prefabs/knight.tscn", "res://prefabs/tile_map.tscn", "res://prefabs/game_over.tscn", "res://prefabs/hud.tscn", "res://prefabs/obstacle_3.tscn", "res://prefabs/obstacle_4.tscn")
+current_scene="res://prefabs/obstacle_4.tscn"
 center_split_offset=-344
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,7 +34,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/game.gd", "res://scripts/game_over.gd", "res://scripts/hitbox.gd", "res://scripts/hurtbox.gd", "res://scripts/knight.gd", "res://scripts/obstacle.gd", "res://scripts/parallax_background.gd"]
+open_scripts=["res://scripts/blood.gd", "res://scripts/game.gd", "res://scripts/game_over.gd", "res://scripts/ground_obstacles.gd", "res://scripts/hitbox.gd", "res://scripts/hurtbox.gd", "res://scripts/knight.gd", "res://scripts/obstacle.gd", "res://scripts/parallax_background.gd"]
 selected_script="res://scripts/game.gd"
 open_help=[]
 script_split_offset=206
