--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://sprites/tile_map/", "res://sprites/tile_map/Foreground/", "res://sprites/enemies/", "res://sprites/enemies/ghost/", "res://sounds/")
+dock_filesystem_selected_paths=PackedStringArray("res://prefabs/obstacle_6.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://sprites/tile_map/Foreground/", "res://sprites/enemies/", "res://sprites/enemies/ghost/", "res://prefabs/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://prefabs/knight.tscn", "res://prefabs/game_over.tscn", "res://prefabs/hud.tscn", "res://prefabs/blood_particles.tscn", "res://prefabs/wood_particles.tscn", "res://prefabs/obstacle_2.tscn", "res://prefabs/obstacle_3.tscn", "res://prefabs/obstacle_1.tscn", "res://prefabs/obstacle_6.tscn")
-current_scene="res://prefabs/blood_particles.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://prefabs/knight.tscn", "res://prefabs/game_over.tscn", "res://prefabs/hud.tscn", "res://prefabs/blood_particles.tscn", "res://prefabs/wood_particles.tscn", "res://prefabs/obstacle_2.tscn", "res://prefabs/obstacle_3.tscn", "res://prefabs/obstacle_1.tscn", "res://prefabs/obstacle_4.tscn", "res://prefabs/obstacle_6.tscn")
+current_scene="res://prefabs/obstacle_6.tscn"
 center_split_offset=-344
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=11
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/game.gd", "res://scripts/game_over.gd", "res://scripts/ground_hurtbox.gd", "res://scripts/ground_obstacles.gd", "res://scripts/hitbox.gd", "res://scripts/hurtbox.gd", "res://scripts/knight.gd", "res://scripts/obstacle.gd", "res://scripts/parallax_background.gd", "res://prefabs/particles.gd"]
-selected_script="res://scripts/hurtbox.gd"
+open_scripts=["res://scripts/dynamic.gd", "res://scripts/game.gd", "res://scripts/game_over.gd", "res://scripts/ground_hurtbox.gd", "res://scripts/ground_obstacles.gd", "res://scripts/hitbox.gd", "res://scripts/hurtbox.gd", "res://scripts/knight.gd", "res://scripts/obstacle.gd", "res://scripts/parallax_background.gd", "res://prefabs/particles.gd"]
+selected_script="res://scripts/knight.gd"
 open_help=[]
 script_split_offset=206
 list_split_offset=0
@@ -43,16 +43,16 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://sprites/outline.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://sprites/outline.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
+log_filter_1=false
 log_filter_3=true
 log_filter_4=true
 collapse=false
